Participate: implement fixed button on small screens

--- a/src/components/participate/style.scss
+++ b/src/components/participate/style.scss
@@ -20,12 +20,16 @@
   }
 
   &__title {
-    @include font-size(60px);
+    @include font-size(40px);
 
     color: $color-yellow;
     font-family: $font-adelle;
     margin-bottom: 0;
     margin-top: 0;
+
+    @include mq($from: desktop) {
+      @include font-size(60px);
+    }
   }
 
   &__intro {
